Fixed issue with dropdown going behind footer by setting min div height

--- a/appliance_catalog/static/appliance_catalog/css/appliance_catalog.css
+++ b/appliance_catalog/static/appliance_catalog/css/appliance_catalog.css
@@ -107,8 +107,12 @@
 .appCatalog .dropdown-multiselect {
     margin-top: 8px;
     margin-bottom: 3px;
+
 }
 
+div.appliance-content {
+    min-height: 400px;
+}
 .corner-ribbon.complex-logo {
     background: #f0f0f0;
     color: black;
